[package]
name = "wnsv-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["console", "FileSystemDirectoryHandle", "FileSystemWritableFileStream"] }
# SteamデポのAES-256-CBC復号用の暗号ライブラリ
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
